// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Price /> renders correctly 1`] = `
<span
  className="price"
>
  100
  .58
</span>
`;

exports[`<Price /> renders correctly 2`] = `
<span
  className="price"
>
  100
  <span>
     $
  </span>
</span>
`;

exports[`<Price /> renders correctly 3`] = `
<span
  className="price"
>
  <b>
    100
  </b>
  .00
  <span>
     €
  </span>
</span>
`;

exports[`<Price /> renders correctly 4`] = `
<span
  className="price test"
>
  100
  <span
    className="invisible-dot"
  >
    .
  </span>
  <sup
    className="fractional-class"
  >
    00
  </sup>
  <span
    className="currency-class"
  >
     ₽
  </span>
</span>
`;
